# attack-of-the-franka

./: .gitignore  README.md  project.repos
attack_of_the_franka/: README.md  package.xml  setup.cfg  setup.py
attack_of_the_franka/attack_of_the_franka/: camera_processor.py  common.py  robot_control.py
attack_of_the_franka/config/: apriltag.rviz  apriltag.yaml  parameters.yaml
attack_of_the_franka/launch/: attack_of_the_franka.launch.py  realsense.launch.py  robot.launch.py
attack_of_the_franka/test/: test_average_tf.py  test_dead_enemy_count.py
attack_of_the_franka_interfaces/: CMakeLists.txt  package.xml
attack_of_the_franka_interfaces/msg/: DetectedObject.msg  Detections.msg
moveit_testing/: README.md  package.xml  setup.cfg  setup.py
moveit_testing/launch/: moveit_testing.launch.py
moveit_testing/moveit_testing/: move_group.py  moveit_interface.py  simple_move.py
moveit_testing/test/: test_flake8.py  test_pep257.py
moveit_testing_interfaces/: CMakeLists.txt  package.xml
moveit_testing_interfaces/srv/: MoveToOrientation.srv  MoveToPose.srv  MoveToPosition.srv  UpdateAttachedObstacles.srv  UpdateObstacles.srv
test_cartesian/: package.xml  setup.cfg  setup.py
test_cartesian/test_cartesian/: testing_cartesian.py
