<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>attack_of_the_franka</name>
  <version>0.0.0</version>
  <description>Wield a lightsaber to vanquish enemies!</description>
  <maintainer email="ngmorales97@gmail.com">Attack of the Franka</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>attack_of_the_franka_interfaces</exec_depend>
  <exec_depend>moveit_testing</exec_depend>
  <exec_depend>moveit_testing_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>franka_msgs</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>geometry_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
